Corrected a minor typo in the documentation where 'programm' was used instead of 'program.'

--- a/README
+++ b/README
@@ -39,7 +39,7 @@ Additionally you need some external tools (exemplarily for Ubuntu):
 
 -------------------------------------------------------------------
 
-For a detailed explanation of the programm, its usage, etc., please
+For a detailed explanation of the program, its usage, etc., please
 refer to the high level documentation doc/documentation_HL.pdf
 (esp. sections 4-6, for starters).
 
